--- a/src/styles/im.scss
+++ b/src/styles/im.scss
@@ -5,6 +5,9 @@
   cursor: pointer;
   z-index: 4;
 }
+.chat-main {
+  background-color: #303133!important;
+}
 
 .im-user-box {
   position: relative;
@@ -36,9 +39,9 @@
  * chats
  */
 .chatting-roster-content {
-  height: 100%; 
+  height: 800px; 
   text-align: left;
-  margin: 22px 0;
+  background-color:#2e3238
 }
 .chatting-roster-group-list {
   .title {
@@ -49,10 +52,14 @@
     padding: 0px;
     list-style-type: none;
     text-align: left;
+    overflow-y: auto;
+    height: 800px;
     li {
-      padding: 12px 0px;
-      background-color: #fff;
-      border-bottom: 1px solid #fff;
+      i {
+        font-size: 25px;
+        color: #fff; 
+      }
+      padding: 12px 10px;
       a:link{
         color: #fff;
       }
@@ -64,19 +71,90 @@
 }
 
 .friend-list {
-  height: 502px;
+  border: 1px solid #fff;
+  .row {
+    width: 16.667%;
+    min-width: 200px;
+    height: 100%;
+  }
+  .el-card {
+    border: none;
+  }
 }
 .friend-item {
   display: flex;
-  font-size: 32px;
-  align-items: flex-end;
+  display: flex;
+  flex-direction: column;
+  align-items: start;
+  border-bottom: 1px solid #292c33;
+  cursor: pointer;
+  padding: 4px 15px;
+  .item {
+    margin: 5px 10px;
+    font-size: 16px;
+    font-weight:bold;
+    color: #FFF;
+  }
+  .msg {
+    margin-left: 30px;
+    font-size:8px;
+    width: 150px;
+    height: 16px;
+    color: #909399;
+    overflow:hidden;
+    text-overflow:ellipsis;
+    white-space:nowrap
+  }
+  .friend-name {
+    display: flex;
+    align-items: center;
+  }
+}
+.chatting-main {
+  height: 800px;
+  background-color: #fff;
+
+  .chatting-show {
+    top: 0px;
+    left: 0px;
+    right: 0px;
+    height: 0px;
+  }
+  .chatting-input {
+    
+    .el-textarea {
+      height: 100%;
+      textarea {
+        height: 75px;
+        width: 100%;
+      }
+    }
+    .left {
+      text-align: right;
+      margin-right:10px; 
+    }
+  }
+}
+
+.chatting-title {
+  position: relative;
+  padding: 12px 0;
+  border-bottom: 1px solid #d6d6d6;
+  background-color: #eee;
+  height: 50px;
 }
 .chatting-content {
-  height: 480px;
+  height: 600px;
   background-color: #fff;
   flex: 1;
   width: 100%;
   overflow: hidden;
+  .el-scrollbar__wrap {
+    margin-right:30px;
+  }
+  el-scrollbar__bar is-horizontal {
+    height:0px;
+  }
   .chatting-item {
     padding: 10px;
     width: 100%;
@@ -88,6 +166,7 @@
     .msg-from {
       display: flex;
       align-items: center;
+      margin-right: 18px;
       span.loc {
         color: gray;
         font-size: 60%;
@@ -105,10 +184,11 @@
     }
     .msg-content {
       margin-top: 5px;
-      background-color: #DCDFE6;
-      width: 300px;
-      padding: 10px 30px;
-      border-radius: 15px;
+      background-color: #b2e281;
+      min-width: 300px;
+      max-width: 1000px;
+      padding: 10px 10px;
+      border-radius: 5px;
       text-align: left;
     }
   }
@@ -185,9 +265,6 @@
     text-align: center;
     background-color: #FFFDE7;
   }
-}
-
-.chatting-input {
 }
 
 .chatting-btn-file {
